--- a/web/web-front/src/main/webapp/info.html
+++ b/web/web-front/src/main/webapp/info.html
@@ -68,9 +68,19 @@
     <div class="header">
         <div class="width1190">
             <div class="fl">您好，欢迎来到尚好房！</div>
-            <div class="fr">
+            <!--用户未登陆-->
+            <div class="fr" v-if="userInfo.nickName == ''">
                 <a href="login.html">登录</a> |
                 <a href="register.html">注册</a> |
+                <a href="javascript:;">加入收藏</a> |
+                <a href="javascript:;">设为首页</a>
+            </div>
+            <!--用户已经登陆-->
+            <!--用户已经登陆-->
+            <div class="fr" v-else>
+                <a href="javascript:;">欢迎{{userInfo.nickName}}</a> |
+                <a href="javascript:;" @click="logout()">退出</a> |
+                <a href="follow.html">我的关注</a> |
                 <a href="javascript:;">加入收藏</a> |
                 <a href="javascript:;">设为首页</a>
             </div>
@@ -401,11 +411,16 @@
             house: {},
             houseBroker: {},
             houseImage1List: [],
-            isFollow: false
+            isFollow: false,
+            userInfo:{
+                nickName:''
+            }
         },
 
         created() {
             this.init()
+
+            this.uploadUserInfo()
         },
 
         mounted() {
@@ -454,6 +469,23 @@
                     this.houseImage1List = response.data.data.houseImage1List
                     this.isFollow = response.data.data.isFollow
                     this.isLoad = true
+                })
+            },
+            //加载用户信息
+            uploadUserInfo(){
+                var item = sessionStorage.getItem("userInfo");
+                if (item != null && item != ''){
+                    this.userInfo = JSON.parse(item)
+                }
+            },
+            //退出登录
+            logout(){
+                axios({
+                    "url":"/userInfo/logout",
+                    "method":"GET"
+                }).then(response => {
+                    sessionStorage.removeItem("userInfo")
+                    location.href = "index.html"
                 })
             }
         }
